--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="flex">
       <div class="flex field-container">
-          <div class="field"></div>
+          <div class="fields"></div>
       </div>
       <div class="buttons">
         <a class="a-copy-latex">copy latex</a>
