--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <title>copyquill</title>
-    <link rel="stylesheet" href="/include/mathquill.css" />
+    <link rel="stylesheet" href="include/mathquill.css" />
     <link rel="stylesheet" href="/src/renderer.css" />
-    <script src="/include/jquery.min.js"></script>
-    <script src="/include/mathquill.min.js"></script>
-    <script src="/include/html2canvas.min.js" defer></script>
-    <script src="/src/renderer.js" defer></script>
+    <!-- VENDORED
+    <script type="module" src="include/jquery.min.js"></script>
+    <script type="module" src="include/mathquill.min.js"></script>
+    -->
+    <!-- CDN -->
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script type="module" src='https://cdnjs.cloudflare.com/ajax/libs/mathquill/0.10.1-a/mathquill.min.js'></script>
+    <!-- -->
+    <script type="module" src="include/html2canvas.min.js" defer></script>
+    <script type="module" src="/src/renderer.js" defer></script>
   </head>
   <body>
     <div class="flex">
