--- a/index.html
+++ b/index.html
@@ -1,32 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>copyquill</title>
-    <link rel="stylesheet" href="include/mathquill.css" />
-    <link rel="stylesheet" href="/src/renderer.css" />
-    <!-- VENDORED
-    <script type="module" src="include/jquery.min.js"></script>
-    <script type="module" src="include/mathquill.min.js"></script>
-    <script type="module" src="include/html2canvas.min.js" defer></script>
-    -->
-    <!-- CDN -->
-    <script type="module" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="module" src='https://cdnjs.cloudflare.com/ajax/libs/mathquill/0.10.1-a/mathquill.min.js'></script>
-    <script type="module" src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-    <!-- -->
-    <script type="module" src="/src/renderer.js" defer></script>
-  </head>
-  <body>
-    <div class="flex">
-      <div class="flex field-container">
-          <div class="fields"></div>
-      </div>
-      <div class="buttons">
-        <a class="a-copy-latex">copy latex</a>
-        <a class="a-copy-image">copy image</a>
-        <a class="a-save-image">save image</a>
-      </div>
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <!-- LOCAL -->
+  <script type="module" src="include/jquery.min.js"></script>
+  
+  <!-- CDN -->
+  <!-- <script type="module" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> -->
+  
+  <script type="module" src="include/mathquill.min.js"></script>
+  <script type="module" src="/src/renderer.js" defer></script>
+  <link rel="stylesheet" href="include/mathquill.css" />
+</head>
+
+<body>
+  <div class="field"></div>
+</body>
+
 </html>
